# gz-sensors

./: .gitignore  .hgignore  BUILD.bazel  CMakeLists.txt  Changelog.md  LICENSE  MODULE.bazel  Migration.md  README.md  api.md.in  bitbucket-pipelines.yml  package.xml  tutorials.md.in
.bcr/: metadata.template.json
.github/: CODEOWNERS
bazel/: BUILD.bazel  gz_sensor_library.bzl
cmake/: CodeCoverage.cmake  SearchForStuff.cmake  TestUtils.cmake  Utils.cmake  config.hh.in  ignition-config.cmake.in
doc/: CMakeLists.txt  doxygen.css  header.html  ignition.in  (+3 more)
examples/custom_sensor/: CMakeLists.txt  CustomSensor.cc  CustomSensor.hh  DoubleSensor.cc  DoubleSensor.hh  Odometer.cc  Odometer.hh  README.md  custom_sensor.sdf
examples/loop_sensor/: CMakeLists.txt  README.md  altimeter_example.sdf  main.cc  sensors.sdf
examples/save_image/: CMakeLists.txt  main.cc
include/ignition/sensors/: AirPressureSensor.hh  AltimeterSensor.hh  BoundingBoxCameraSensor.hh  BrownDistortionModel.hh  CMakeLists.txt  CameraConfig.hh  CameraSensor.hh  CameraUtils.hh  DepthCameraSensor.hh  Distortion.hh  Events.hh  Export.hh  ForceTorqueSensor.hh  GaussianNoiseModel.hh  GpsSensor.hh  GpuLidarSensor.hh  ImageBrownDistortionModel.hh  ImageDistortion.hh  ImageGaussianNoiseModel.hh  ImageNoise.hh  ImuSensor.hh  Lidar.hh  LidarSensor.hh  LogicalCameraSensor.hh  MagnetometerSensor.hh  Manager.hh  NavSatSensor.hh  Noise.hh  RGBDCameraSensor.hh  Register.hh  RenderingEvents.hh  RenderingSensor.hh  RgbdCameraSensor.hh  Sample.hh  SegmentationCameraSensor.hh  Sensor.hh  SensorFactory.hh  SensorPlugin.hh  SensorTypes.hh  System.hh  (+5 more)
include/ignition/sensors/air_pressure/: Export.hh
include/ignition/sensors/altimeter/: Export.hh
include/ignition/sensors/boundingbox_camera/: Export.hh
include/ignition/sensors/camera/: CameraSensor.hh  Export.hh
include/ignition/sensors/depth_camera/: Export.hh
include/ignition/sensors/force_torque/: Export.hh
include/ignition/sensors/gpu_lidar/: Export.hh
include/ignition/sensors/imu/: Export.hh
include/ignition/sensors/lidar/: Export.hh
include/ignition/sensors/logical_camera/: Export.hh
include/ignition/sensors/magnetometer/: Export.hh
include/ignition/sensors/navsat/: Export.hh
include/ignition/sensors/rendering/: Export.hh
include/ignition/sensors/rgbd_camera/: Export.hh
include/ignition/sensors/segmentation_camera/: Export.hh
include/ignition/sensors/thermal_camera/: Export.hh
include/ignition/sensors/wide_angle_camera/: Export.hh
proto/: CMakeLists.txt
proto/gz/msgs/: air_speed_sensor.proto  altimeter.proto  annotated_axis_aligned_2d_box.proto  annotated_axis_aligned_2d_box_v.proto  annotated_oriented_3d_box.proto  annotated_oriented_3d_box_v.proto  axis_aligned_2d_box.proto  axis_aligned_box.proto  camera_info.proto  dvl_beam_state.proto  dvl_kinematic_estimate.proto  dvl_range_estimate.proto  dvl_tracking_target.proto  dvl_velocity_tracking.proto  fluid_pressure.proto  imu.proto  laserscan.proto  logical_camera_image.proto  magnetometer.proto  navsat.proto  oriented_3d_box.proto  performance_sensor_metrics.proto  sensor_noise.proto
src/: AirFlowSensor.cc  AirPressureSensor.cc  AirSpeedSensor.cc  AltimeterSensor.cc  BoundingBoxCameraSensor.cc  BrownDistortionModel.cc  CMakeLists.txt  CameraConfig.cc  CameraSensor.cc  CameraSensorUtil.cc  CameraSensorUtil.hh  CameraUtils.cc  Camera_TEST.cc  CpuLidarSensor.cc  DepthCameraSensor.cc  DepthImage2Points.cc  DepthImage2Points.hh  Distortion.cc  DopplerVelocityLog.cc  EnvironmentalData.cc  Events.cc  ForceTorqueSensor.cc  GaussianNoiseModel.cc  GpsSensor.cc  GpuLidarSensor.cc  GpuLidarSensor_TEST.cc  ImageBrownDistortionModel.cc  ImageDistortion.cc  ImageGaussianNoiseModel.cc  ImageNoise.cc  ImuSensor.cc  ImuSensor_TEST.cc  Lidar.cc  LidarSensor.cc  LidarSensor_TEST.cc  Lidar_TEST.cc  LogicalCameraSensor.cc  MagnetometerSensor.cc  Manager.cc  Manager_TEST.cc  (+22 more)
src/camera/: CMakeLists.txt  CameraSensor.cc  CameraSensorPlugin.cc  CameraSensorPlugin.hh  ImageSaver.cc  ImageSaver.hh
src/gpu_lidar/: CMakeLists.txt  GpuLidarSensor.cc  depth_fragment.glsl  planar_depth_vertex.glsl  shaders.hh.in
test/: BUILD.bazel  CMakeLists.txt  test_config.h.in  test_config.hh.in
test/gtest/src/: gtest.cc
test/integration/: CMakeLists.txt  TransportTestTools.hh  air_flow.cc  air_pressure.cc  air_pressure_plugin.cc  air_speed.cc  all_symbols_have_version.bash.in  altimeter.cc  altimeter_plugin.cc  boundingbox_3d_camera_sensor_builtin.sdf  boundingbox_camera.cc  boundingbox_camera_plugin.cc  camera.cc  camera_plugin.cc  camera_sensor_builtin.sdf  cpu_lidar_sensor.cc  deprecated_TEST.cc  depth_camera.cc  depth_camera_plugin.cc  depth_camera_sensor_builtin.sdf  distortion_camera.cc  dvl.cc  force_torque.cc  force_torque_plugin.cc  gpu_lidar_plugin.cc  gpu_lidar_sensor.cc  gpu_lidar_sensor_plugin.cc  imu.cc  imu_plugin.cc  logical_camera.cc  logical_camera_plugin.cc  magnetometer.cc  magnetometer_plugin.cc  navsat.cc  noise_generation.cc  rgbd_camera.cc  rgbd_camera_plugin.cc  segmentation_camera.cc  segmentation_camera_plugin.cc  thermal_camera.cc  (+5 more)
test/performance/: CMakeLists.txt
test/regression/: CMakeLists.txt
test/sdf/: boundingbox_3d_camera_sensor_builtin.sdf  boundingbox_camera_sensor_builtin.sdf  camera_intrinsics.sdf  camera_projection.sdf  camera_sensor_builtin.sdf  camera_sensor_l16_builtin.sdf  camera_sensor_l8_builtin.sdf  camera_sensor_l8_l16_builtin.sdf  custom_sensors.sdf  depth_camera_intrinsics.sdf  depth_camera_points_frame_id.sdf  depth_camera_projection.sdf  depth_camera_sensor_builtin.sdf  distortion_camera_sensor_builtin.sdf  rgbd_camera_points_frame_id.sdf  rgbd_camera_sensor_builtin.sdf  segmentation_camera_sensor_builtin.sdf  thermal_camera_sensor_8bit_builtin.sdf  thermal_camera_sensor_builtin.sdf  triggered_boundingbox_camera_sensor_builtin.sdf  triggered_boundingbox_camera_sensor_topic_builtin.sdf  triggered_camera_sensor_builtin.sdf  triggered_camera_sensor_topic_builtin.sdf  wide_angle_camera_sensor_builtin.sdf
test/valgrind/: CMakeLists.txt  manager_memcheck.cc
(+77 files in other folders)
