<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>gz-sensors8</name>
  <version>8.2.1</version>
  <description>Gazebo Sensors : Sensor models for simulation</description>
  <maintainer email="ichen@openrobotics.org">Ian Chen</maintainer>
  <license>Apache License 2.0</license>
  <url type="website">https://github.com/gazebosim/gz-sensors</url>

  <buildtool_depend>cmake</buildtool_depend>

  <build_depend>gz-cmake3</build_depend>

  <depend>gz-common5</depend>
  <depend>gz-math7</depend>
  <depend>gz-msgs10</depend>
  <depend>gz-rendering8</depend>
  <depend>gz-tools2</depend>
  <depend>gz-transport13</depend>
  <depend>sdformat14</depend>

  <test_depend>xvfb</test_depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
