<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>gz-sensors9</name>
  <version>9.2.0</version>
  <description>Gazebo Sensors : Sensor models for simulation</description>
  <maintainer email="ichen@openrobotics.org">Ian Chen</maintainer>
  <license>Apache License 2.0</license>
  <url type="website">https://github.com/gazebosim/gz-sensors</url>

  <buildtool_depend>cmake</buildtool_depend>

  <build_depend>gz-cmake4</build_depend>

  <depend>gz-common6</depend>
  <depend>gz-math8</depend>
  <depend>gz-msgs11</depend>
  <depend>gz-rendering9</depend>
  <depend>gz-tools2</depend>
  <depend>gz-transport14</depend>
  <depend>sdformat15</depend>

  <test_depend>xvfb</test_depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
