<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>gz-sensors</name>
  <version>11.0.0</version>
  <description>Gazebo Sensors : Sensor models for simulation</description>
  <maintainer email="ichen@openrobotics.org">Ian Chen</maintainer>
  <license>Apache License 2.0</license>
  <url type="website">https://github.com/gazebosim/gz-sensors</url>

  <buildtool_depend>cmake</buildtool_depend>

  <build_depend>gz-cmake</build_depend>

  <depend>gz-common</depend>
  <depend>gz-math</depend>
  <depend>gz-msgs</depend>
  <depend>gz-rendering</depend>
  <depend>gz-tools2</depend>
  <depend>gz-transport</depend>
  <depend>sdformat</depend>

  <test_depend>xvfb</test_depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
